// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops path 1`] = `
Array [
  <RoleBar
    label="Dev Ops"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Whale
      gender="male"
      pose="default"
    />
    <QuoteBubble
      noCopyToClipboard={true}
      variant="thought"
    />
    <ActionButtons
      role="devops"
    />
  </section>,
]
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/brag path 1`] = `
Array [
  <RoleBar
    label="Dev Ops"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Whale
      gender="male"
      pose="brag"
    />
    <QuoteBubble
      quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
    />
    <ActionButtons
      role="devops"
    />
  </section>,
]
`;

exports[`COMPONENT - DevOpsRolePage renders correctly for /devops/confess path 1`] = `
Array [
  <RoleBar
    label="Dev Ops"
  />,
  .c0 {
  position: relative;
  padding: 2rem;
}

<section
    className="c0"
  >
    <Whale
      gender="male"
      pose="confess"
    />
    <QuoteBubble
      quote="Yesterday I was implementing PUT method for missing RESTful API endpoint."
    />
    <ActionButtons
      role="devops"
    />
  </section>,
]
`;
